# extract_costume_from_vedio

./: Dockerfile  main.py  pyproject.toml
app/: main.py
